--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="icon" href="./static/logo.png" type="image/x-icon">
+    <link rel="icon" type="image/png" sizes="32x32" href="./static/logo.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./static/logo.png">
+    <meta name="description" content="A guessing game where you guess a person's name in 6 tries, with clues along the way">
     <title>persle</title>
   </head>
   <body>
