--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script async src="//static.getclicky.com/101364504.js"></script>
   </body>
 </html>
